Adjusted jsonRETTL3 to include collabCount

--- a/PSIPublicationLabel_2.ipynb
+++ b/PSIPublicationLabel_2.ipynb
@@ -2251,12 +2251,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Adjusting Box Size to Paper Count"
+        "# Adjusting TreeMap Box Sizing for Paper Count Rather Than Collab Count"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2305,7 +2305,8 @@
         "        topic_node[\"children\"].append({\n",
         "            \"name\": sub,\n",
         "            \"children\": papers, # Papers are the children!\n",
-        "            \"authorList\": sub_authors\n",
+        "            \"authorList\": sub_authors,\n",
+        "            \"collabCount\": len(sub_to_authors.get(sub, []))\n",
         "        })\n",
         "    json_output[\"children\"].append(topic_node)\n",
         "\n",
